# CTPL

./: ARCHITECTURE.md  CMakeLists.txt  CTPL_Distributed.vcxproj  EXCEPTION_HANDLING_GUIDE.md  README_DISTRIBUTED.md  README_VISUAL_STUDIO.md  README_WIN32.md  TECHNICAL_DOCUMENTATION.md  compile_example.bat  ctpl.h  ctpl_dag_scheduler.cpp  ctpl_dag_scheduler.h  ctpl_distributed.h  ctpl_fault_tolerance.cpp  ctpl_fault_tolerance.h  ctpl_network_manager.cpp  ctpl_network_manager.h  ctpl_resource_manager.cpp  ctpl_resource_manager.h  ctpl_stl.h  ctpl_stream_processing.cpp  ctpl_stream_processing.h  ctpl_thread_pool_core.cpp  ctpl_thread_pool_core.h  example_distributed.cpp  pch.h  test_exception.cpp  test_simple.cpp
